--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "astro": "^2.10.14",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.4",
+    "prettier-plugin-astro": "^0.8.0"
   }
 }
