--- a/package.json
+++ b/package.json
@@ -11,10 +11,22 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.16.0",
+    "@astrojs/react": "^2.0.2",
+    "@astrojs/rss": "^2.1.0",
+    "@astrojs/sitemap": "^1.0.1",
+    "@astrojs/svelte": "^2.0.1",
     "@astrojs/tailwind": "^4.0.0",
+    "@astrojs/vue": "^2.0.1",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@tailwindcss/line-clamp": "^0.4.4",
     "astro": "^2.10.14",
-    "tailwindcss": "^3.3.3"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "svelte": "^3.55.1",
+    "tailwindcss": "^3.3.3",
+    "vue": "^3.2.47"
   },
   "devDependencies": {
     "prettier": "^2.8.4",
